--- a/06-27/views/extrapage.hbs
+++ b/06-27/views/extrapage.hbs
@@ -1,2 +1,7 @@
-<!-- {{fileContent}} -->
+{{fileContent}}
+<br>
 {{{wikiContent}}}
+
+{{pageName}}
+
+<a href="{{pageName}}/edit">Edit This Page</a>
